--- a/src/chrome/bower.json
+++ b/src/chrome/bower.json
@@ -13,10 +13,6 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
-    "octokat": "~0.4.11",
-    "font-awesome": "~4.4.0",
-    "angular": "~1.4.3",
-    "backbone": "~1.2.1"
+    "jquery": "~2.1.4"
   }
 }
